# monky

./: .gitignore  Cargo.toml
crates/monky-utilities/: Cargo.toml
crates/monky-utilities/src/: date_format.rs  lib.rs  signature.rs  url_parse.rs  uuid.rs
crates/monky-utilities/src/kafka/: mod.rs
crates/monky-utilities/src/kafka/core/: mod.rs
crates/monky-utilities/src/kafka/core/application/: app.rs
crates/monky-utilities/src/kafka/core/deserializer/: kafka_deserializer.rs  mod.rs
crates/monky-utilities/src/kafka/core/operations/: ops.rs
crates/monky-utilities/src/kafka/core/schema/: app_comm.rs  mod.rs  topic.rs  topic_impl.rs  topic_structure.rs
crates/monky-utilities/src/kafka/core/serdes/: hybrid_object_mapper.rs  mod.rs
crates/monky-utilities/src/kafka/core/serializer/: avro_array.rs  kafka_serializer.rs  mod.rs
crates/monky-utilities/src/kafka/schema/: mod.rs  topic.rs  topic_impl.rs
crates/monky-utilities/src/kafka/schema/application/: app.rs  mod.rs
crates/monky-utilities/src/kafka/schema/operations/: mod.rs  ops.rs
crates/monky-utilities/src/kafka/schema/source/: mod.rs  source.rs
