[package]
name = "monky-utilities"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "general utilities for the overall backend of monky"

[dependencies]

[lints]
workspace = true