[package]
name = "monky-utilities"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "general utilities for the overall backend of monky"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.9"
sha1 = "0.10.6"
hex = "0.4.3"
time = { version = "0.3.44", features = [ "formatting", "parsing"] }

[lints]
workspace = true